# order-book-python-htmx

./: .gitignore  README.md  pyproject.toml
src/order_book_htmx/: __init__.py  main.py
src/order_book_htmx/templates/: orderbook.html  orderbook_data.html
